<resources>
    <string name="app_name">Short Stories</string>
    <string name="stories">Index</string>
    <string name="pigsTitle">TheThreeLittlePigs</string>
    <string name="pigsAuthor">Flora Annie Steel</string>
    <string name="moonAuthor">Mary Hayes Davis</string>
    <string name="moonTitle">HowTheMoonBecameBeautiful</string>
    <string name="TheThreeLittlePigs1">Once upon a time there was an old mother pig who had three little pigs and not enough food to feed them. So when they were old enough, she sent them out into the world to seek their fortunes.

The first little pig was very lazy. He didn\'t want to work at all and he built his house out of straw. The second little pig worked a little bit harder but he was somewhat lazy too and he built his house out of sticks. Then, they sang and danced and played together the rest of the day.

The third little pig worked hard all day and built his house with bricks. It was a sturdy house complete with a fine fireplace and chimney. It looked like it could withstand the strongest winds.

The next day, a wolf happened to pass by the lane where the three little pigs lived; and he saw the straw house, and he smelled the pig inside. He thought the pig would make a mighty fine meal and his mouth began to water.

So he knocked on the door and said:</string>
    <string name="TheThreeLittlePigs2">"Little pig! Little pig!
    Let me in! Let me in!"</string>
    <string name="TheThreeLittlePigs3">But the little pig saw the wolf\'s big paws through the keyhole, so he answered back:</string>
    <string name="TheThreeLittlePigs4">"No! No! No!
    Not by the hairs on my chinny chin chin!"</string>
    <string name="TheThreeLittlePigs5">Then the wolf showed his teeth and said:</string>
    <string name="TheThreeLittlePigs6">"Then I'll huff
    and I'll puff
    and I'll blow your house down."</string>
    <string name="TheThreeLittlePigs7">So he huffed and he puffed and he blew the house down! The wolf opened his jaws very wide and bit down as hard as he could, but the first little pig escaped and ran away to hide with the second little pig.

The wolf continued down the lane and he passed by the second house made of sticks; and he saw the house, and he smelled the pigs inside, and his mouth began to water as he thought about the fine dinner they would make.

So he knocked on the door and said:</string>
    <string name="TheThreeLittlePigs8">"Little pigs! Little pigs!
    Let me in! Let me in!"</string>
    <string name="TheThreeLittlePigs9">But the little pigs saw the wolf\'s pointy ears through the keyhole, so they answered back:</string>
    <string name="TheThreeLittlePigs10">"No! No! No!
    Not by the hairs on our chinny chin chin!"</string>
    <string name="TheThreeLittlePigs11">So the wolf showed his teeth and said:</string>
    <string name="TheThreeLittlePigs12">"Then I'll huff
    and I'll puff
    and I'll blow your house down."</string>
    <string name="TheThreeLittlePigs13">So he huffed and he puffed and he blew the house down! The wolf was greedy and he tried to catch both pigs at once, but he was too greedy and got neither! His big jaws clamped down on nothing but air and the two little pigs scrambled away as fast as their little hooves would carry them.

The wolf chased them down the lane and he almost caught them. But they made it to the brick house and slammed the door closed before the wolf could catch them. The three little pigs they were very frightened, they knew the wolf wanted to eat them. And that was very, very true. The wolf hadn't eaten all day and he had worked up a large appetite chasing the pigs around and now he could smell all three of them inside and he knew that the three little pigs would make a lovely feast. So the wolf knocked on the door and said:</string>
    <string name="TheThreeLittlePigs14">"Little pigs! Little pigs!
    Let me in! Let me in!"</string>
    <string name="TheThreeLittlePigs15">But the little pigs saw the wolf\'s narrow eyes through the keyhole, so they answered back:</string>
    <string name="TheThreeLittlePigs16">"No! No! No!
    Not by the hairs on our chinny chin chin!"</string>
    <string name="TheThreeLittlePigs17">So the wolf showed his teeth and said:</string>
    <string name="TheThreeLittlePigs18">"Then I'll huff
    and I'll puff
    and I'll blow your house down."</string>
    <string name="TheThreeLittlePigs19">Well! he huffed and he puffed. He puffed and he huffed. And he huffed, huffed, and he puffed, puffed; but he could not blow the house down. At last, he was so out of breath that he couldn\'t huff and he couldn\'t puff anymore. So he stopped to rest and thought a bit.

But this was too much. The wolf danced about with rage and swore he would come down the chimney and eat up the little pig for his supper. But while he was climbing on to the roof the little pig made up a blazing fire and put on a big pot full of water to boil. Then, just as the wolf was coming down the chimney, the little piggy pulled off the lid, and plop! in fell the wolf into the scalding water.

So the little piggy put on the cover again, boiled the wolf up, and the three little pigs ate him for supper.</string>

    <string name="HowTheMoonBecameBeautiful11">The Moon is very beautiful with his round, bright face which shines with soft and gentle light on all the world of man. But once there was a time when he was not so beautiful as he is now. Six thousand years ago the face of the Moon became changed in a single night. Before that time his face had been so dark and gloomy that no one liked to look at him, and for this reason he was always very sad.

One day he complained to the flowers and to the stars—for they were the only things that would ever look in his face.

He said, "I do not like to be the Moon. I wish I were a star or a flower. If I were a star, even the smallest one, some great general would care for me; but alas! I am only the Moon and no one likes me. If I could only be a flower and grow in a garden where the beautiful earth women come, they would place me in their hair and praise my fragrance and beauty. Or, if I could even grow in the wilderness where no one could see, the birds would surely come and sing sweet songs for me. But I am only the Moon and no one honors me."

The stars answered and said, "We can not help you. We were born here and we can not leave our places. We never had any one to help us. We do our duty, we work all the day and twinkle in the dark night to make the skies more beautiful.—But that is all we can do," they added, as they smiled coldly at the sorrowful Moon.</string>
    <string name="HowTheMoonBecameBeautiful12">Then the flowers smiled sweetly and said, "We do not know how we can help you. We live always in one place—in a garden near the most beautiful maiden in all the world. As she is kind to every one in trouble we will tell her about you. We love her very much and she loves us. Her name is Tseh-N'io." Still the Moon was sad. So one evening he went to see the beautiful maiden Tseh-N\'io. And when he saw her he loved her at once. He said, "Your face is very beautiful. I wish that you would come to me, and that my face would be as your face. Your motions are gentle and full of grace. Come with me and we will be as one—and perfect. I know that even the worst people in all the world would have only to look at you and they would love you. Tell me, how did you come to be so beautiful?"

"I have always lived with those who were gentle and happy, and I believe that is the cause of beauty and goodness," answered Tseh-N'io.</string>
    <string name="HowTheMoonBecameBeautiful13">And so the Moon went every night to see the maiden. He knocked on her window, and she came. And when he saw how gentle and beautiful she was, his love grew stronger, and he wished more and more to be with her always.

One day Tseh-N\'io said to her mother, "I should like to go to the Moon and live always with him. Will you allow me to go?"

Her mother thought so little of the question that she made no reply, and Tseh-N\'io told her friends that she was going to be the Moon's bride.

In a few days she was gone. Her mother searched everywhere but could not find her. And one of Tseh-N'io's friends said,—"She has gone with the Moon, for he asked her many times."

A year and a year passed by and Tseh-N'io, the gentle and beautiful earth maiden, did not return. Then the people said, "She has gone forever. She is with the Moon."</string>
    <string name="HowTheMoonBecameBeautiful14">The face of the Moon is very beautiful now. It is happy and bright and gives a soft, gentle light to all the world. And there are those who say that the Moon is now like Tseh-N\'io, who was once the most beautiful of all earth maidens.</string>
    <string name="item">Item</string>

</resources>
