<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCDC"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtPigs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pigsTitle"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtPigs"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:paddingTop="32dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory1"/>
            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:id="@+id/pigsImg1"
                android:layout_below="@+id/txtPigsStory1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"/>

            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_below="@id/pigsImg1"
                android:paddingEnd="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory2"/>

            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_below="@id/txtPigsStory2"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory3"/>

            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory3"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory4"/>

            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:id="@+id/pigsImg2"
                android:layout_below="@+id/txtPigsStory4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/pigsImg2"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory5"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory5"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory6"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory6"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory7"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory7"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory8"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory8"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory9"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory9"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory10"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory10"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory11"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory11"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory12"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory12"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory13"/>
            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:id="@+id/pigsImg3"
                android:layout_below="@+id/txtPigsStory13"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp" />
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/pigsImg3"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory14"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory14"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory15"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory15"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory16"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory16"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory17"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory17"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory18"/>
            <TextView
                android:textSize="16sp"
                android:text="@string/TheThreeLittlePigs19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/txtPigsStory18"
                android:paddingEnd="16dp"
                android:gravity="center"
                android:id="@+id/txtPigsStory19"/>
            <ImageView
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:id="@+id/pigsImg4"
                android:layout_below="@+id/txtPigsStory19"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"/>
            <TextView
                android:textSize="18sp"
                android:text="@string/pigsAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_below="@id/pigsImg4"
                android:paddingEnd="16dp"
                android:gravity="start"
                android:id="@+id/pigs_author"/>
        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>